# GregTrainer

./: .gitignore  CMakeLists.txt  build.sh  build_release.sh  readme.md
.github/workflows/: build.yml
src/: AnswerChecker.h  ExtraMenus.h  GridDisplayComponent.cpp  GridDisplayComponent.h  Identifiers.h  Main.cpp  MainComponent.cpp  MainComponent.h  MelodyGenerator.h  MidiGenerator.h  Synth.h  TrainerEngine.cpp  TrainerEngine.h  Utility.h
